Chenge bitbucket to github

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
 
-<li class="animation"><a href="https://bitbucket.com/anmcarrow/" title="Немного кода и не только" target="_blank">
-	<i class="fa fa-bitbucket"></i>
+<li class="animation"><a href="https://github.com/anmcarrow/" title="Немного кода и не только" target="_blank">
+	<i class="fa fa-github"></i>
 	</a></li>
 
 <li class="animation"><a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!" target="_blank">
