move wishlist to gogs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" href="https://anmcarrow.me/favicon.ico" type="image/x-icon" />
 
 <meta  Name="keywords" Content="графический дизайн карты иллюстрации настольные ролевые игры нри художник иллюстратор" >
-<meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация" >
+<meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация">
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/menu.css" type="text/css">
@@ -35,7 +35,7 @@
         <li class="active"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">ГАЛЕРЕЯ</a></li>
-        <li class="inactive"><a href="https://github.com/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
+        <li class="inactive"><a href="https://gogs.mcrrw.ru/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
         <li class="inactive"><a href="/links" title="Сайд-проекты">ССЫЛКИ</a></li>
 </ul>
 </nav>
