--- a/index_en.html
+++ b/index_en.html
@@ -29,10 +29,7 @@
 <body>
 <div class="wrapper">
 
-
-<logo class="slowanimation"></logo>
-
-
+<div class="img-avatar"></div>
 
 <h2>
 ANDREY M. </br>
