--- a/index_en.html
+++ b/index_en.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/menu.css" type="text/css">
 
+    <link rel="stylesheet" href="css/backpages.css" type="text/css">
+
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
