Add link to main

--- a/index_en.html
+++ b/index_en.html
@@ -16,7 +16,7 @@
 <meta  Name="description" Content="Andrey Makarov's personal webpage">
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    
+
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -31,6 +31,7 @@
 <div class="img-avatar"></div>
 
 <h2>
+<a class="linkabout" title="Go to LinkedIn" href="https://ru.linkedin.com/in/andrey-makarov-3b7646120">
 ANDREY M. </br>
 <i>PERSONAL PAGE<i>
 </a>
