--- a/index_en.html
+++ b/index_en.html
@@ -33,7 +33,7 @@
 <h2>
 <a class="linkabout" title="Go to LinkedIn" href="https://ru.linkedin.com/in/andrey-makarov-3b7646120">
 ANDREY M. </br>
-<i>PERSONAL PAGE<i>
+PERSONAL PAGE
 </a>
 </h2>
 </a>
