--- a/index_en.html
+++ b/index_en.html
@@ -32,8 +32,8 @@
 
 <h2>
 <a class="linkabout" title="Go to LinkedIn" href="https://ru.linkedin.com/in/andrey-makarov-3b7646120">
-ANDREY M. </br>
-PERSONAL PAGE
+<i>ANDREY M. </br>
+PERSONAL PAGE</i>
 </a>
 </h2>
 </a>
