--- a/index_en.html
+++ b/index_en.html
@@ -28,7 +28,7 @@
 <body>
 <div class="wrapper">
 
-<div class="img-avatar"></div>
+<div class="img-avatar-en"></div>
 
 <h2>
 <a class="linkabout" title="Go to LinkedIn" href="https://ru.linkedin.com/in/andrey-makarov-3b7646120">
