--- a/en/index.html
+++ b/en/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,7 +65,7 @@ PERSONAL PAGE</i>
 	</a></li>
 
 <li class="animation"><a href="https://t.me/anmcarrow/" title="Let's chat" target="_blank">
-<i class="fa fa-telegram"></i>
+<i class="class="fa fa-telegram" aria-hidden="true"></i>
 </a></li>
 
 <li class="animation"><a href="mailto:mb@anmcarrow.me" title="mb@anmcarrow.me" target="_blank">
