Telegram icon fix

--- a/en/index.html
+++ b/en/index.html
@@ -65,7 +65,7 @@ PERSONAL PAGE</i>
 	</a></li>
 
 <li class="animation"><a href="https://t.me/anmcarrow/" title="Let's chat" target="_blank">
-<i class="class="fa fa-telegram" aria-hidden="true"></i>
+<i class="fa-telegram" aria-hidden="true"></i>
 </a></li>
 
 <li class="animation"><a href="mailto:mb@anmcarrow.me" title="mb@anmcarrow.me" target="_blank">
