--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 	<i class="fa fa-github"></i>
 	</a></li>
 
-  <li class="animation"><a href="https://t.me/anmcarrow/" title="Instant and clever messaging" target="_blank">
-	<i class="fa-telegram fa-fw"></i>
-	</a></li>
+  <li class="animation"><a href="https://t.me/anmcarrow/" title="Let's chat" target="_blank">
+  <i class="fa-telegram" aria-hidden="true"></i>
+  </a></li>
 
 <li class="animation"><a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!" target="_blank">
 	<i class="fa-envelope-o fa-fw"></i>
