--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
 
-<li class="animation"><a href="https://ru.linkedin.com/in/andrey-makarov-3b7646120" title="Профиль на LinkedIn" target="_blank">
+<li class="animation"><a href="https://www.linkedin.com/in/ahvi8/" title="Профиль на LinkedIn" target="_blank">
 	<i class="fa fa-linkedin-square"></i>
 	</a></li>
 
